Refactor: Apply SonarLint